# Azaka

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yaml  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: codeql-analysis.yml  mypy.yml  python-app.yml  status-embeds.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextvars.data.json  contextvars.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  inspect.data.json  inspect.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  posixpath.data.json  posixpath.meta.json  queue.data.json  queue.meta.json  selectors.data.json  selectors.meta.json  socket.data.json  socket.meta.json  (+20 more)
Azaka/client/: index.html
Azaka/exceptions/: index.html
Azaka/models/: index.html
Azaka/paginator/: index.html
Azaka/query/: index.html
azaka/: __init__.py  client.py  condition.py  config.py  context.py  exceptions.py  interface.py  models.py  paginator.py  query.py  utils.py
azaka/commands/: __init__.py  command.py  condition.py  presets.py  proxy.py
azaka/connection/: __init__.py  connector.py  protocol.py  transporter.py
azaka/objects/: __init__.py  baseobject.py  character.py  dbstats.py  producer.py  quote.py  release.py  staff.py  ulist.py  ulistlabels.py  user.py  visualnovel.py  vn.py
azaka/tools/: __init__.py  cache.py  enums.py  mixins.py  paginator.py  presets.py  proxy.py  queuecontrolmixin.py  transformer.py  utils.py
azaka/websocket/: protocol.py  transporter.py
azaka/workers/: cache.py  transformer.py
css/: extra.css
docs/: index.md  logging-&-utils.md  tutorial.md
docs/API-Reference/: client.md  context.md
docs/Azaka/: client.md  exceptions.md  models.md  paginator.md  (+1 more)
examples/: client-subclass.py  non-blocking-connect.py  paginator-usage.py  setting-data.py
logging-&-utils/: index.html
overrides/: main.html
search/: search_index.json
tests/: test_client.py  test_conditions.py  test_models.py  test_objects.py  test_paginator.py
tutorial/: index.html
(+172 files in other folders)
