[tool.poetry]
name = "Azaka"
version = "0.4.0"
description = "A work in progress API Wrapper around The Visual Novel Database (VNDB) written in Python."
authors = ["mooncell07 <mooncell07@users.noreply.github.com>"]
license = "MIT"
keywords = ["vndb", "apiwrapper", "async", "visualnovel", "python"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
