[tool.poetry]
name = "Azaka"
version = "0.4.3"
description = "A work in progress API Wrapper around The Visual Novel Database (VNDB) written in Python."
authors = ["Nova <mooncell07@proton.me>"]
license = "MIT"
keywords = ["vndb", "apiwrapper", "async", "visualnovel", "python"]
readme = "README.md"
documentation = "https://mooncell07.github.io/Azaka/"
homepage = "https://github.com/mooncell07/Azaka/"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"

[poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
mypy = "^1.4.1"
python-dotenv = "^1.0.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = {extras = ["python-legacy"], version = "^0.22.0"}

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
